Fix buttons on mobile.

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -181,7 +181,7 @@
   gap: $spacing-sm;
 }
 
-.other-tag {
+a.other-tag {
   display: inline-flex;
   align-items: center;
   gap: $spacing-xs;
