--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -36,7 +36,8 @@
     }
   }
 
-  .interests-list {
+  .interests-list,
+  .other-links {
     justify-content: center;
   }
 
